kubernates/ncp/manual-blue-green/blue-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: naver-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: naver
      version: blue
  template:
    metadata:
      labels:
        app: naver
        version: blue
    spec:
      containers:
        - name: naver
          image: nks.kr.private-ncr.ntruss.com/hello:plain-text  # 새로운 버전
          ports:
            - containerPort: 80
