kubernates/ncp/manual-blue-green/blue-green-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: naver
spec:
  type: NodePort
  selector:
    app: naver
    version: blue
  ports:
    - port: 80
      targetPort: 80
